[package]
name = "seed-axum_reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
axum-macros = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.23", features = ["full"] }
tower-http = { version = "0.3" }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
hyper = "0.14.20"
hyper-tls = "0.5.0"
rand_seeder = "0.2"
rand = "0.8"
rand_pcg = "0.3"
chrono = "0.4"