[package]
name = "dbg6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_seeder = "0.2"
rand = "0.8"
rand_pcg = "0.3"
chrono = "0.4"
once_cell = "1.17.0"
yew = { version = "0.20", features = ["csr"] }
getrandom = { version = "0.2", features = ["js"] }
