[package]
name = "dbg6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_seeder = "0.2"
rand = "0.8"
rand_pcg = "0.3"
chrono = "0.4"
yew = "0.17"
getrandom = { version = "0.2", features = ["js"] }
gloo-console = "0.2.3"
serde_json = "1.0.91"
linked-hash-map = "0.5.6"
